unbound: more refactoring, less pages, blacklist -> blocklist
PR: https://github.com/opnsense/core/issues/4327

--- a/src/opnsense/service/conf/actions.d/actions_unbound.conf
+++ b/src/opnsense/service/conf/actions.d/actions_unbound.conf
@@ -68,9 +68,10 @@ message:Checking Unbound configuration
 
 [dnsbl]
 command:
-    /usr/local/opnsense/scripts/unbound/download_blacklists.py &&
+    /usr/local/opnsense/scripts/unbound/blocklists.py &&
     cp /usr/local/etc/unbound.opnsense.d/dnsbl.conf /var/unbound/etc/ &&
-    /usr/local/sbin/unbound-control -c /var/unbound/unbound.conf reload
+    /usr/local/sbin/unbound-control -c /var/unbound/unbound.conf stop &&
+    /usr/local/bin/flock -n -E 0 -o /tmp/unbound_start.lock /usr/local/opnsense/scripts/unbound/start.sh
 parameters:
 type:script
 message:Updating Unbound DNSBLs
