unbound: migrate to single model #4327

--- a/src/opnsense/service/templates/OPNsense/Unbound/core/dot.conf
+++ b/src/opnsense/service/templates/OPNsense/Unbound/core/dot.conf
@@ -12,7 +12,7 @@ forward-zone:
   name: "."
   forward-tls-upstream: yes
 {%     for dot in dots %}
-  forward-addr: {{ dot.server }}@{{ dot.port }}{% if dot.verify %}#{{ dot.verify }}{% endif %}
+  forward-addr: {{ dot.server }}{% if dot.port %}@{{ dot.port }}{% endif %}{% if dot.verify %}#{{ dot.verify }}{% endif %}
 
 {%     endfor %}
 {%   endif %}
